# python-graphql

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f86ac6e66c76_create_all_initial_tables.py
db/: db_setup.py
db/models/: company.py  user.py
db/pydantic_schemas/: company.py  user.py
